Update sellCar to distribute funds and add admin balance endpoint
- Modified sellCar to split funds: 80% to seller, 16% to AdminAccount, 4% to TaxAccount

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,7 @@ databaseChangeLog:
       file: db/changelog/scripts/06-ADD-USER-CAR-TABLE.sql
   - include:
       file: db/changelog/scripts/07-ADD-BALANCE-IN-CENTES.sql
+  - include:
+      file: db/changelog/scripts/08-CREATE-ADMIN-ACCOUNT.sql
+  - include:
+      file: db/changelog/scripts/09-CREATE-TAX-ACCOUNT.sql
